--- a/sign-up-page.css
+++ b/sign-up-page.css
@@ -148,3 +148,9 @@ button:hover {
 .apple-btn:hover {
   background-color: #333;
 }
+
+.social-btns {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
